--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,10 @@
-# fly.toml app configuration file generated for masa-madre-chatbot on 2025-08-21T07:47:21-06:00
+# fly.toml app configuration file generated for masa-madre-chatbot on 2025-08-21T18:03:52Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'masa-madre-chatbot'
 primary_region = 'dfw'
-
-[env]
-  PYTHONPATH = "/app:/app/lib:/app/api"
-  FLASK_APP = "api.chat_api:app"
-  FLASK_ENV = "production"
 
 [build]
 
@@ -25,3 +20,4 @@ primary_region = 'dfw'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
