--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for masa-madre-chatbot on 2025-08-21T07:47:21-06:00
+# fly.toml app configuration file generated for masa-madre-chatbot on 2025-08-21T11:15:18-06:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -6,17 +6,12 @@
 app = 'masa-madre-chatbot'
 primary_region = 'dfw'
 
-[env]
-  PYTHONPATH = "/app:/app/lib:/app/api"
-  FLASK_APP = "api.chat_api:app"
-  FLASK_ENV = "production"
-
 [build]
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'false'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
@@ -24,4 +19,4 @@ primary_region = 'dfw'
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
-  cpus = 1
+  cpus = 2
