--- a/fly.toml
+++ b/fly.toml
@@ -1,3 +1,5 @@
+# fly.toml app configuration file generated for masa-madre-chatbot on 2025-08-21T19:17:36Z
+#
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
@@ -9,7 +11,7 @@ primary_region = 'dfw'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
@@ -17,4 +19,5 @@ primary_region = 'dfw'
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
-  cpus = 2
+  cpus = 1
+  memory_mb = 1024
